# clacks

./: .build  .gitignore  .install  .run  CMakeLists.txt  LICENSE  REQUIREMENTS  TODO
clacksd/: CMakeLists.txt  clacksd.c
clacksd/src/: clacksd.c
clacksd/src/storage/: cl_file_module.c  cl_file_module.h  cl_redis_module.h
clacksd/src/transport-server/: cl_discovery.c  cl_discovery.h  cl_discovery_thread.c  cl_discovery_thread.h  cl_transport_domsock.c  cl_transport_domsock.h
cmake/Modules/: FindLibUUID.cmake
identifier-service/: CMakeLists.txt
identifier-service/src/: clacksidd.c  id_dom_socket.c  id_dom_socket.h  id_generator.c  id_generator.h  id_tag_manager.c  id_tag_manager.h
include/: cl_transport.h  clacks_common.h  clacksdConfig.in.h
lib/: CMakeLists.txt
lib/src/clacks-api/: clacks.c  clacks.h  id_client.c  id_client.h
lib/src/transport-client/: cl_transport_domsock_client.c  cl_transport_domsock_client.h  discovery.c  discovery.h
proto_defs/: .generate_protos.sh  Discovery.proto
proto_defs/trace_message/: Makefile  TraceMessage.proto
test_apps/: Makefile  api_test.c  discovery_test_app.py  id_gen_benchmark.c  id_test.c  run_id_benchmark.sh  test_server.c
